# cKate

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Graphics.cpp  Graphics.h  Include.h  Input.cpp  Input.h  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp
